# oj_backend/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/admin/category-create": {
+        "/api/admin/category-create": {
             "post": {
                 "tags": [
                     "管理员私有方法"
@@ -42,7 +42,7 @@
                 }
             }
         },
-        "/admin/category-delete": {
+        "/api/admin/category-delete": {
             "delete": {
                 "tags": [
                     "管理员私有方法"
@@ -74,7 +74,7 @@
                 }
             }
         },
-        "/admin/category-modify": {
+        "/api/admin/category-modify": {
             "put": {
                 "tags": [
                     "管理员私有方法"
@@ -119,7 +119,7 @@
                 }
             }
         },
-        "/admin/problem-create": {
+        "/api/admin/problem-create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -156,7 +156,7 @@
                 }
             }
         },
-        "/admin/problem-modify": {
+        "/api/admin/problem-modify": {
             "put": {
                 "tags": [
                     "管理员私有方法"
@@ -190,7 +190,7 @@
                 }
             }
         },
-        "/admin/test-case": {
+        "/api/admin/test-case": {
             "get": {
                 "tags": [
                     "管理员私有方法"
@@ -234,7 +234,7 @@
                 }
             }
         },
-        "/category-list": {
+        "/api/category-list": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -270,7 +270,7 @@
                 }
             }
         },
-        "/login": {
+        "/api/login": {
             "post": {
                 "tags": [
                     "公共方法"
@@ -300,7 +300,7 @@
                 }
             }
         },
-        "/problem-detail": {
+        "/api/problem-detail": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -324,7 +324,7 @@
                 }
             }
         },
-        "/problem-list": {
+        "/api/problem-list": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -366,7 +366,7 @@
                 }
             }
         },
-        "/rank-list": {
+        "/api/rank-list": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -396,7 +396,7 @@
                 }
             }
         },
-        "/register": {
+        "/api/register": {
             "post": {
                 "tags": [
                     "公共方法"
@@ -448,7 +448,7 @@
                 }
             }
         },
-        "/send-code": {
+        "/api/send-code": {
             "post": {
                 "tags": [
                     "公共方法"
@@ -473,7 +473,7 @@
                 }
             }
         },
-        "/submit-list": {
+        "/api/submit-list": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -521,7 +521,7 @@
                 }
             }
         },
-        "/user-detail": {
+        "/api/user-detail": {
             "get": {
                 "tags": [
                     "公共方法"
@@ -545,7 +545,7 @@
                 }
             }
         },
-        "/user/submit": {
+        "/api/user/submit": {
             "post": {
                 "tags": [
                     "用户私有方法"
